# kaiju-number-eight

./: Makefile  README.md  docker-compose.prod.yml  docker-compose.yaml  package-lock.json
backend/: Dockerfile  Makefile  pyproject.toml  requirements.txt  settings.py.example
backend/app/: __init__.py  routers.py
backend/app/models/ai/: ai.py
backend/app/models/analyze/: __init__.py  analyzers.py  constants.py  enums.py  models.py
backend/app/models/orm_models/: __init__.py  orm_models.py
backend/gunicorn/: gunicorn.config.prod.py  gunicorn.config.py
backend/scripts/: init_settings.sh  run_server.sh
etl/: crop_data.py  globe_data.py  pyproject.toml
frontend/: .dockerignore  .env.tmpl  Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json
frontend/scripts/: init_env.sh
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: CropDataCard.vue  CropDataPop.vue  DataCard.vue  EmptyStation.vue  InitStationsDetail.vue  Mapbox.vue  MultipleStations.vue  Searchbar.vue  SpecificStation.vue  SuggestPop.vue
frontend/src/views/earth/: mapbox.vue
nginx/: service.prod.yml  service.yml
nginx/conf.d/: default.conf
nginx/conf.prod.d/: default.conf
salt/_runners/: base.py  deploy.py
salt/state/: deploy.sls
